<resources>
    <string name="app_name">EasyCooker</string>
    <string name="log_in">log in</string>
    <string name="e_mail">E-mail</string>
    <string name="name">Name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="username">Username</string>
    <string name="join_us">Join us</string>
    <string name="firstname">firstname</string>
    <string name="super_cooker">Super Cooker</string>
    <string name="nosignup">Continue without signing in</string>
    <string name="select_page_title">select available ingredients</string>
    <string name="textview">TextView</string>
    <string name="meat">meat</string>
    <string name="todo">TODO</string>
    <string name="openlist">openlist</string>
    <string name="vegetables">Vegetables</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tomato">Tomato</string>
    <string name="get_meal_of_the_day">get meal of the day</string>
    <string name="photo_of_the_recipe">photo of the instructions</string>
    <string name="allegies_and_hates">allegies and hates</string>
    <string name="enter_food_that_you_are_allergic_from_or_hate">enter food that you are allergic from or hate</string>
    <string name="image">image</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="recipe_name">Recipe name</string>
    <string name="getmeal">get meal</string>
    <string name="meal_name">meal name</string>
    <string name="missing_ingredients">missing ingredients</string>
    <string name="last_name">last name</string>
    <string name="phone_number">phone number</string>
    <string name="sign_up">sign up</string>
    <string name="login">login</string>
    <string name="continue_without_login">continue without login</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="mealphoto">mealphoto</string>
    <string name="mealname">name</string>
</resources>
