<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="5dp"
        android:paddingBottom="20dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/mealimage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/mealphoto"
                android:paddingTop="0dp"
                android:src="@drawable/back" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/mealname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mealname"
                    android:textColor="#2B2B2B"
                    android:textSize="25sp"
                    android:layout_marginEnd="25dp"/>

                <TextView
                    android:id="@+id/missingingredientstextview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/missing_ingredients"
                    android:textSize="20sp" />


            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>